--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,8 @@
         android:id="@+id/custom_view"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
+        app:square_color="#FF6D00"
+        app:square_size="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
