- create compound custom view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <com.example.customview.CustomCardView
+        android:id="@+id/custom_card_view"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/custom_view"
+        app:layout_constraintVertical_bias="0.531"
+        tools:layout_editor_absoluteX="0dp" />
+
     <com.example.customview.CustomView
         android:id="@+id/custom_view"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
-        app:square_color="#FF6D00"
-        app:square_size="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:square_color="#FF6D00"
+        app:square_size="100dp" />
 
     <Button
         android:id="@+id/button"
